[package]
name = "rusty_bot"
version = "0.1.2"
description = "Discord bot that was created for a specific server. Written in Rust"
homepage = "https://jrud52.github.io/rusty_bot"
authors = ["Justin Rhude <justin.rhude52@gmail.com>"]

[dependencies]
kankyo = "0.1"
log = "0.3"
serde_json = "1.0.9"
futures = "0.1"
tokio-core = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
requests = "0.0.30"

[dependencies.serenity]
git = "https://github.com/zeyla/serenity.git"
default-features = false
features = ["cache", "framework", "standard_framework"]
